--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="#">Life For Food</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -33,32 +33,12 @@
         
         <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
+        <button class="btn btn-outline-success my-2 my-sm-0" id='signout' onclick='signOut()'>Sign out</button>
       </div>
     </nav>
-    <div class="container-fluid" style="margin: 0; padding: 0;">
-      <div class="">
-        <!-- jumbotron -->
-        <div class="container-fluid" style="margin: 0; padding: 0; background-image: url('./public/background-blur.jpg'); background-position: center; background-size: cover;">
-          <div class="d-flex flex-column justify-content-center shadow-lg align-items-center" style="height: 50vh; ">
-            <!-- image -->
-            <img src="./public/food.png" alt="" style="width: 100px;">
-            <!-- Text -->
-            <h5 class="text-white">Temukan restoran, kafe, dan bar terbaik di Jakarta</h5>
-            <!-- input group -->
-            <div class="input-group mb-3 d-flex justify-content-center">
-              <div class="input-group-append" style="width: 100vh;">
-                <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
-                <button class="btn btn-danger" type="button" id="button-addon2">Button</button>
-              </div>
-            </div>
-          </div>
-        </div>
 
-        <!-- cards -->
-      </div>
-      <a href="#" id='signout' onclick="signOut();">Sign out</a>
+    
     <div id="login">
       <div class="wrapper1" >
         <div class="container1">
@@ -83,6 +63,28 @@
           </form>
         </div>
         </div>
+    </div>
+    <div id='mainBody' class="container-fluid" style="margin: 0; padding: 0;">
+      <div class="">
+        <!-- jumbotron -->
+        <div class="container-fluid" style="margin: 0; padding: 0; background-image: url('./public/background-blur.jpg'); background-position: center; background-size: cover;">
+          <div class="d-flex flex-column justify-content-center shadow-lg align-items-center" style="height: 50vh; ">
+            <!-- image -->
+            <img src="./public/food.png" alt="" style="width: 100px;">
+            <!-- Text -->
+            <h5 class="text-white">Temukan restoran, kafe, dan bar terbaik di Jakarta</h5>
+            <!-- input group -->
+            <div class="input-group mb-3 d-flex justify-content-center">
+              <div class="input-group-append" style="width: 100vh;">
+                <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
+                <button class="btn btn-danger" type="button" id="button-addon2">Button</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- cards -->
+      </div>
     </div>
 
     <!-- Optional JavaScript -->
