--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <div class="container-fluid" style="margin: 0; padding: 0;">
       <div class="">
         <!-- jumbotron -->
-        <div class="container-fluid" style="margin: 0; padding: 0; background-image: url('./public/background-blur.jpg'); background-position: center; background-size: cover;">
-          <div class="d-flex flex-column justify-content-center shadow-lg align-items-center" style="height: 50vh; ">
+        <div class="container-fluid" style="margin: 0; padding: 0; background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('./public/background-blur.jpg'); background-position: center; background-size: cover;">
+          <div class="d-flex flex-column justify-content-center align-items-center" style="height: 50vh;">
             <!-- image -->
             <img src="./public/food.png" alt="" style="width: 100px;">
             <!-- Text -->
@@ -42,14 +42,65 @@
             <!-- input group -->
             <div class="input-group mb-3 d-flex justify-content-center">
               <div class="input-group-append" style="width: 100vh;">
-                <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
-                <button class="btn btn-danger" type="button" id="button-addon2">Button</button>
+                <input type="text" class="form-control" placeholder="Nama Restoran Pilihanmu" aria-label="Nama Restoran Pilihanmu" aria-describedby="button-addon2">
+                <button class="btn btn-danger ml-2 rounded" type="button" id="button-addon2">Search</button>
               </div>
             </div>
           </div>
+          
         </div>
-
+        
         <!-- cards -->
+
+        <div class="container mt-3">
+
+          <div class="row">
+            <div class="col-md-4">
+              <div class="card mb-4 shadow-sm d-flex align">
+                <img class="bd-placeholder-img card-img-top" style="object-fit: contain;" src="http://pluspng.com/img-png/pasta-png-hd-spaghetti-png-transparent-image-520.png" width="100%" height="225" >
+                <div class="card-body">
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                      <button type="button" class="btn btn-sm btn-outline-secondary">Description</button>
+                      <button type="button" class="btn btn-sm btn-outline-secondary">Location</button>
+                    </div>
+                    <small class="text-muted">4/5 Star</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card mb-4 shadow-sm">
+                <img class="bd-placeholder-img card-img-top" style="object-fit: contain;" src="http://pluspng.com/img-png/food-png-restaurant-food-dish-png-image-2951-443.png" width="100%" height="225" >
+                <div class="card-body">
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                      <button type="button" class="btn btn-sm btn-outline-secondary">Description</button>
+                      <button type="button" class="btn btn-sm btn-outline-secondary">Location</button>
+                    </div>
+                    <small class="text-muted">4/5 Star</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card mb-4 shadow-sm">
+                <img class="bd-placeholder-img card-img-top" style="object-fit: contain;" src="https://www.netclipart.com/pp/m/52-526307_pizza-png-images-transparent-free-download-pepperoni-pizza.png" width="100%" height="225" >
+                <div class="card-body">
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                      <button type="button" class="btn btn-sm btn-outline-secondary">Description</button>
+                      <button type="button" class="btn btn-sm btn-outline-secondary">Location</button>
+                    </div>
+                    <small class="text-muted">4/5 Star</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+
       </div>
     </div>
 
