--- a/index.html
+++ b/index.html
@@ -16,6 +16,31 @@
     <title>Life For Food</title>
   </head>
   <body>
+
+    <!-- MODAL MAP -->
+
+    <div class="modal fade" id="myMap">
+
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <!-- Modal Header -->
+                <div class="modal-header">
+                    <h4 class="modal-title">Location</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <!-- Modal body -->
+                <div class="modal-body">
+                  <div id="map"></div>
+                </div>
+                <!-- Modal footer -->
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-sm btn-danger" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+      
+    </div>
+
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">Life For Food</a>
@@ -96,8 +121,11 @@
             <!-- input group -->
             <div class="input-group mb-3 d-flex justify-content-center">
               <div class="input-group-append" style="width: 100vh;">
-                <input type="text" class="form-control" placeholder="Nama Restoran Pilihanmu" aria-label="Nama Restoran Pilihanmu" aria-describedby="button-addon2">
-                <button class="btn btn-danger ml-2 rounded" type="button" id="button-addon2">Search</button>
+              <form id="formSearch" class="col-md-10 d-flex">
+                <input id="searchBox" type="text" class="form-control" placeholder="Nama Restoran Pilihanmu" aria-label="Nama Restoran Pilihanmu" aria-describedby="button-addon2">
+                <button class="btn btn-danger ml-2 rounded" type="sumbit" id="button-addon2">Search</button>
+              </form>
+              
               </div>
             </div>
           </div>
@@ -134,6 +162,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyACDo8yjIIFJCahhcSP0icGNvA7dFvf4jo"></script>
     <script src='./js/main.js'></script>
   </body>
 </html>
