--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#" disabled>Food<span class="sr-only">(current)</span></a>
+          <li class="nav-item active" id='favorites'>
+            <!-- Loop favorites -->
           </li>
         </ul>
         <button class="btn btn-outline-success my-2 my-sm-0" id='signout' onclick='signOut()'>Sign out</button>
