--- a/index.html
+++ b/index.html
@@ -140,6 +140,35 @@
       </div>
     </div>
 
+
+
+    <div class="container-fluid" id='detailPage'>
+      <div class="row">
+        <div class="col-sm-1">
+        </div>
+
+      <div class="col-sm-7">
+          <div class="d-flex flex-wrap" id='detailFavorite'>
+
+
+          </div>
+      </div>
+
+
+      <div class="col-sm-4" style="margin-top: 50px;">
+
+          <div class="d-flex flex-wrap" id='imageRandomForFavorite'>
+
+          </div>
+
+      </div>
+    </div>
+  </div>
+
+
+
+
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://apis.google.com/js/platform.js" async defer></script>
