--- a/index.html
+++ b/index.html
@@ -140,6 +140,10 @@
       </div>
     </div>
 
+    <div id="detail">
+
+    </div>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://apis.google.com/js/platform.js" async defer></script>
