--- a/detail.html
+++ b/detail.html
@@ -14,7 +14,7 @@
       </div>
       <div class="col-sm-7">
         <div class="d-flex flex-column">
-          <div class="rounded bg-light border" style="margin-top: 50px;">
+          <div class="rounded bg-light border shadow" style="margin-top: 50px;">
             <img src="https://b.zmtcdn.com/data/reviews_photos/985/21929b0b8763406fab51cb537601d985_1571796339.jpg" style="width: 100%; object-fit: cover; height: 30vh;" class="rounded-top">
             <div class="d-flex justify-content-between align-items-center" style="margin:10px">
               <div class="d-flex justify-content-center flex-column m-4">
@@ -31,7 +31,7 @@
           </div>
 
           <div style="width: 100%;">
-            <div class="rounded bg-light border" style="margin-top: 30px;">
+            <div class="rounded bg-light border shadow" style="margin-top: 30px;">
               <div class="container">
                 <div class="row">
 
@@ -63,7 +63,7 @@
               </div>
             </div>
           </div>
-          <div class="rounded bg-light border" style="margin-top: 30px; margin-bottom: 30px;">
+          <div class="rounded bg-light border shadow" style="margin-top: 30px; margin-bottom: 30px;">
             <div class="m-4">
               <img src="https://b.zmtcdn.com/data/reviews_photos/985/21929b0b8763406fab51cb537601d985_1571796339.jpg" alt="" style="width: 100%;">
             </div>
@@ -74,25 +74,7 @@
 
       <div class="col-sm-4" style="margin-top: 50px;">
         <div class="d-flex flex-wrap">
-          <div class="card m-1" style="width: 11rem;">
-            <img src="https://images.unsplash.com/photo-1571942389648-078c07e6a28f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2689&q=80" class="card-img-top">
-            <div class="card-body">
-              <h6 class="card-title">Card title</h6>
-            </div>
-          </div>
-          <div class="card m-1" style="width: 11rem;">
-            <img src="https://images.unsplash.com/photo-1571942389648-078c07e6a28f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2689&q=80" class="card-img-top">
-            <div class="card-body">
-              <h6 class="card-title">Card title</h6>
-            </div>
-          </div>
-          <div class="card m-1" style="width: 11rem;">
-            <img src="https://images.unsplash.com/photo-1571942389648-078c07e6a28f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2689&q=80" class="card-img-top">
-            <div class="card-body">
-              <h6 class="card-title">Card title</h6>
-            </div>
-          </div>
-          <div class="card m-1" style="width: 11rem;">
+          <div class="card m-1 shadow border" style="width: 11rem;">
             <img src="https://images.unsplash.com/photo-1571942389648-078c07e6a28f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2689&q=80" class="card-img-top">
             <div class="card-body">
               <h6 class="card-title">Card title</h6>
