--- a/index.html
+++ b/index.html
@@ -140,7 +140,6 @@
       </div>
     </div>
 
-<<<<<<< HEAD
 
 
     <div class="container-fluid" id='detailPage'>
@@ -167,13 +166,32 @@
   </div>
 
 
+      <div class="container-fluid" id='detailPage'>
+      <div class="row">
+        <div class="col-sm-1">
+        </div>
+
+      <div class="col-sm-7">
+          <div class="d-flex flex-wrap" id='detailDesc'>
 
 
-=======
-    <div id="detail">
+          </div>
+      </div>
 
+
+      <div class="col-sm-4" style="margin-top: 50px;">
+
+          <div class="d-flex flex-wrap" id='imageRandomForFavorite'>
+
+          </div>
+
+      </div>
     </div>
->>>>>>> progress desc
+  </div>
+
+
+
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
