--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
         </div>
 
       <div class="col-sm-7">
+          
           <div class="d-flex flex-wrap" id='detailFavorite'>
 
 
@@ -156,9 +157,29 @@
 
 
 
-    <div id="detail">
+  <div class="container-fluid" id='detailPage'>
+    <div class="row">
+      <div class="col-sm-1">
+      </div>
+
+    <div class="col-sm-7">
+        <div class="d-flex flex-wrap" id='detailDesc'>
+
+
+        </div>
+    </div>
+
+
+    <div class="col-sm-4" style="margin-top: 50px;">
+
+        <div class="d-flex flex-wrap" id='imageRandomForFavorite'>
+
+        </div>
 
     </div>
+  </div>
+</div>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
